# aloha

./: .gitignore  README.md  index.html  pyproject.toml
data/: hat-trainval.json  nocaps-val-foil.json
docs/: index.html
src/aloha/: cli.py  dataset.py  types.py
src/aloha/metrics/: __init__.py  aloha.py  base.py  chair.py  clipscore.py
src/aloha/object_parser/: __init__.py  anthropic.py  base.py  openai.py  prompts.py  spacy.py
src/aloha/string_similarity/: __init__.py  base.py  gpt3_embeddings.py  sentence_transformers.py  string_matching.py  word2vec.py
src/aloha/utils/: __init__.py  coco_gt_objects.py  object_detections.py  pattern.py  pyutils.py
static/css/: index.css
